fixed some font sizing and line spacing

--- a/Common/css/site.css
+++ b/Common/css/site.css
@@ -83,8 +83,8 @@ footer p {
 
 p {
     color: #777;
-    font: 300 1em museo-sans, lato, verdana, helvetica, sans-serif;
-    line-height: 150%;
+    font: 100 1em museo-sans, lato, verdana, helvetica, sans-serif;
+    line-height: 125%;
     margin-bottom: .5em;
 }
 
